# ExamCountdown

./: .gitignore  _headers  _redirects  build.js  depend.mjs  forge.config.js  handleIPC.js  index.js  main.cjs  main.js  package-lock.json  package.json  preload.cjs  release.cmd  renderer.js  schema.json  server.js  settings.js  terser.config.js  version.cmd  webpack.config.cjs
.github/workflows/: Release.yml
settings/: index.html  main.js  preload.cjs  renderer.js  settings.js
src/: assets.js  concat.mjs  config.mjs  define.js  handleIPC.js  index.html  index.js  index.mjs  main.js  minify.mjs  preload.cjs  project.json  update.cmd
src-editor/: README.md  build.js  index.html  minify.js  package-lock.json  package.json  rsbuild.config.cjs  terser.config.js  vite.config.js
src-editor/src/: App.vue  main.js  schema.json  store.js
src-main/: build.js  depend.js  package-lock.json  package.json  rspack.config.js  terser.config.js
src-tauri/: Cargo.toml  tauri.conf.json  version.js
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs
src/base/: apply-image.js  applyImage.js  bing-wallpaper.js  bingwallpaper.js  color.js  ec.js  exam.js  extension.js  index.js  loader.js  main.js  network-waiter.js  property.js  themecolor.js  time.js
src/cmd/: update.cmd  update.ps1
src/extension/: bingwallpaper.js  color.js  exams.js  hitokoto.js  index.js  main.js  update.js  version.js
src/index/: ec.js  exam.js  extension.js  index.js  loader.js  main.js  networkWaiter.js  propGeneral.js  propUser.js  property.js
src/js/: version.js
src/json/: project.json
website/: .gitignore  build.js  package-lock.json  package.json  rspack.config.cjs  terser.config.js  upgrade.js  webpack.config.cjs
(+78 files in other folders)
