[package]
name = "ExamCountdown"
version = "25.2.4"
description = "ExamCountdown Tauri"
authors = [ "Nyasers" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]

  [build-dependencies.tauri-build]
  version = "2.0.3"
  features = [ ]

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-wallpaper = "2.0.1"
tauri-plugin-store = "2"
winreg = "0.55.0"
tauri-plugin-process = "2"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "2.2.0"
  features = [ "tray-icon" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
